overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,10 @@
     font-size: 0 !important;
 }
 
-.slick-initialized {
-    overflow: hidden;
+html,
+body {
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 
